--- a/blosc/CMakeLists.txt
+++ b/blosc/CMakeLists.txt
@@ -201,9 +201,9 @@ endif()
 if(BUILD_STATIC)
     add_library(blosc_static STATIC ${SOURCES})
     set_target_properties(blosc_static PROPERTIES OUTPUT_NAME blosc)
-    if (MSVC)
-        set_target_properties(blosc_static PROPERTIES PREFIX lib)
-    endif()
+#    if (MSVC)
+#        set_target_properties(blosc_static PROPERTIES PREFIX lib)
+#    endif()
     target_link_libraries(blosc_static ${LIBS})
     target_include_directories(blosc_static PUBLIC ${BLOSC_INCLUDE_DIRS})
 endif(BUILD_STATIC)
